force-app/main/default/objects/FoxRoach_Account__c/FoxRoach_Account__c.object-meta.xml
<CustomObject>
    <label>FoxRoach Account</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>