force-app/main/default/objects/FoxRoach_Account__c/fields/FoxRoachID__c.field-meta.xml
<CustomField>
    <fullName>FoxRoachID__c</fullName>
    <label>FoxRoachID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>