force-app/main/default/objects/FoxRoach_Account__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Reason for Failure</description>
    <inlineHelpText>Reason for Failure</inlineHelpText>
    <label>Reason</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>