force-app/main/default/objects/FoxRoach_Account__c/fields/Subscription_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Sync_Status__c</fullName>
    <label>Subscription Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Do Nothing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>