force-app/main/default/objects/FoxRoach_Account__c/fields/Subscription_Sync_Type__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Sync_Type__c</fullName>
    <label>Subscription Sync Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sync Active</fullName>
            </value>
            <value>
                <fullName>Sync Inactive</fullName>
            </value>
            <value>
                <fullName>Do Nothing</fullName>
            </value>
            <value>
                <fullName>Sync Create</fullName>
            </value>
            <value>
                <fullName>Office Not in SF-</fullName>
            </value>
            <value>
                <fullName>Sync Reinstate</fullName>
            </value>
            <value>
                <fullName>Subscription In Progress</fullName>
            </value>
            <value>
                <fullName>Office Not in SF- Subscription Inactive</fullName>
            </value>
            <value>
                <fullName>Office Changed- Subscription Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>